--- a/root/style.css
+++ b/root/style.css
@@ -24,6 +24,20 @@ body {
   transform: scale(1.2);
 }
 
+.info-finali {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: white;
+  padding: 5vh;
+  height: 80vh;
+}
+
+.footer {
+  height: 10vh;
+  background-color: white;
+}
+
 .navbar {
   height: 12vh;
   background-color: #fff9c4;
@@ -53,15 +67,6 @@ body {
   justify-content: center;
   padding-bottom: 15vh;
   background-image: linear-gradient(#fff9c4 100%);
-}
-
-.info-finali {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #00ccaf;
-  padding: 5vh;
-  height: 80vh;
 }
 
 .arrow-btn {
@@ -159,4 +164,22 @@ p {
     overflow: scroll;
     position: relative;
   }
+}
+
+
+.map-container {
+  position: relative;
+  width: 100%;          /* si adatta alla larghezza del contenitore */
+  padding-bottom: 56.25%; /* rapporto 16:9 (altezza/larghezza) */
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
