--- a/root/style.css
+++ b/root/style.css
@@ -15,13 +15,50 @@ body {
 }
 
 #castello_di_alice_logo {
-  width: 20%;
-  height: 20%;
+  min-width: 200px; /* dimensione minima leggibile */
+  height: auto; /* mantiene proporzioni */
+  max-width: 30%; /* non cresce troppo sui monitor grandi */
+  padding: 1rem;
   transition: transform 0.2s;
 }
 
 #castello_di_alice_logo:hover {
   transform: scale(1.2);
+}
+
+.container-main-info {
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 10vh;
+}
+
+.container-main-info p {
+  width: 70%;
+  padding: 3vw;
+  font-family: "Fredoka", Verdana, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 500;
+  line-height: 1.7;
+  text-align: justify;
+  color: #222;
+  background-image: linear-gradient(#fff9c4 100%);
+  border-radius: 20px;
+  box-shadow: 4px 4px 5px #ffd8b7;
+  margin-right: 2vw;
+}
+
+@media (max-width: 768px) {
+  .container-main-info p {
+    margin: 0px 2rem;
+    width: 100%;
+  }
+  #dragon-pink {
+    display: none;
+  }
 }
 
 .info-finali {
@@ -45,7 +82,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 3px solid rgba(0,0,0,0.1);
+  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
 }
 
 .navbar img {
@@ -85,7 +122,7 @@ body {
 #mainImage {
   max-height: 750px;
   border-radius: 20px;
-  box-shadow: 3px 3px 10px  gray;
+  box-shadow: 3px 3px 10px gray;
   transition: opacity 0.5s ease; /* animazione su opacità */
   opacity: 1;
 }
@@ -166,10 +203,9 @@ p {
   }
 }
 
-
 .map-container {
   position: relative;
-  width: 100%;          /* si adatta alla larghezza del contenitore */
+  width: 100%; /* si adatta alla larghezza del contenitore */
   padding-bottom: 56.25%; /* rapporto 16:9 (altezza/larghezza) */
   height: 0;
   overflow: hidden;
