--- a/root/style.css
+++ b/root/style.css
@@ -30,6 +30,21 @@ body {
   padding-bottom: 10vh;
 }
 
+.container-gallery{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3px;
+}
+
+.container-gallery div {
+  background-color: #F77F00;
+  height: 200px;
+}
+
+.container-gallery > div > img {
+  object-fit: contain;
+}
+
 .mission-container{
   display: flex;
   justify-content: center;
@@ -40,13 +55,13 @@ body {
 .mission-container p{
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 4vw;
+  font-size: 2rem;
   font-weight: 800;
   font-family: "Fredoka", sans-serif;
   padding: 8rem;
-  text-align: center;
-  color: #e5991e;
-  text-shadow: 2px 2px 5px #c5c5c5;
+  text-align:center;
+  color: #06D6A0;
+  text-shadow: 2px 2px 1px #7e7e7e;
 }
 
 .container-main-info p {
@@ -68,7 +83,7 @@ body {
   box-shadow: 4px 4px 2px #ffd8b7;
 }
 
-.container-social-link {
+.container-social-link, .whatsapp-button {
   margin-right: 1rem;
   width: 30%;
   display: flex;
@@ -85,6 +100,7 @@ body {
   text-transform: uppercase;
   text-shadow: 3px 5px 5px #FFF9C4;
   transition: transform 0.2s;
+  text-align: center;
 }
 
 #titolo:hover {
@@ -111,7 +127,7 @@ body {
 
 .navbar {
   height: 12vh;
-  background-color: #FFF9C4;
+  background-color: #EDF594;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -128,8 +144,7 @@ body {
   display: flex;
   justify-content: start;
   align-items: center;
-  margin-left: 1rem;
-  width: 30%;
+  margin-left: 0;
 }
 
 .nav-links a, #sidebar a, .container-social-link a {
@@ -144,7 +159,7 @@ body {
 .nav-links a:hover,
 .container-social-link a:hover {
   color: #06D6A0;
-  text-decoration: overline;
+  text-decoration: underline;
   text-decoration-color: #06D6A0;
 }
 
@@ -274,18 +289,36 @@ p {
   display: none;
 }
 
-#hamburger-btn {
+#hamburger-btn, .whatsapp-button {
   background: none;
   border: none;
   padding: 0;
   cursor: pointer;
 }
 
-#hamburger-btn img {
+.btn-primary {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  height: 100%;
+  width: 5rem;
+}
+
+.btn-primary i{
+  font-size: 50px;
+  color:#333;
+}
+
+#hamburger-btn img, .whatsapp-button img{
   display: block;
   width: 50px;
   height: auto;
-  background-color: #fff9c4;
+  background-color: #EDF594 ;
+}
+
+.whatsapp-button{
+  display: none;
 }
 
 @media (max-width: 768px) {
@@ -305,7 +338,15 @@ p {
     display: none;
   }
 
-  .hamburger-menu {
+  .container-social-link {
+    display: none;
+  }
+
+  .whatsapp-button{
+    display: flex;
+  }
+
+  .hamburger-menu{
     height: 100%;
     display: flex;
     justify-content: start;
