--- a/root/style.css
+++ b/root/style.css
@@ -9,9 +9,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #fffdf5;
+  background-color: #e9d8a6;
   height: 100%;
-  background-size: contain;
 }
 
 #logo-pic {
@@ -26,31 +25,11 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-bottom: 10vh;
-  margin-top: 2rem;
-}
-
-.mission-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  background-image: url(./castelloIMG.png);
+  padding-bottom: 16vh;
+  background-color: #94d2bd;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.mission-container p {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-weight: 800;
-  font-family: "Fredoka", sans-serif;
-  padding: 8rem;
-  text-align: center;
-  color: #06d6a0;
-  text-shadow: 2px 2px 1px #7e7e7e;
 }
 
 .container-main-info p {
@@ -64,14 +43,9 @@ body {
   color: #222;
   border-radius: 20px;
   box-shadow: 4px 4px 10px gray;
-  margin-right: 2vw;
-  background-image: linear-gradient(
-    135deg,
-    rgba(238, 250, 76, 0.013),
-    rgba(255, 255, 255, 0.2)
-  );
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  margin: 0;
+  padding: 50px;
+  background-color: #FFFF;
 }
 
 .container-social-link {
@@ -85,12 +59,12 @@ body {
 
 #titolo {
   padding: 2rem;
-  color: #f77f00;
+  color: #ee9b00;
   font-weight: 900;
   font-size: 5rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
-  text-shadow: 3px 5px 5px #fff9c4;
+  text-shadow: 3px 2px 5px gray;
   transition: transform 0.2s;
   text-align: center;
 }
@@ -119,7 +93,7 @@ body {
 
 .navbar {
   height: 12vh;
-  background-color: #edf594;
+  background-color: #e9d8a6;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -231,6 +205,11 @@ p {
   line-height: 1.7;
 }
 
+h1 {
+  font-family: "Fredoka", Verdana, sans-serif;
+  padding-left: 30px;
+}
+
 .intro-castello {
   font-family: "Fredoka", Verdana, sans-serif; /* font rotondo, allegro */
   font-size: 2rem; /* grandezza importante */
@@ -265,42 +244,24 @@ p {
 }
 
 .map-container {
-  position: relative;
   display: flex;
+  justify-content: space-between;
   width: 100%; /* si adatta alla larghezza del contenitore */
-  padding-bottom: 56.25%; /* rapporto 16:9 (altezza/larghezza) */
-  height: 0;
+  padding-bottom: 70.25%; /* rapporto 16:9 (altezza/larghezza) */
   overflow: hidden;
   background-color: white;
-  border-radius: 30px;
-  
-}
-
-.map-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  margin-left: 1rem;
+  background-color: #ee9b00;
+  padding: 5vh 2rem;
+  height: 50vh;
+  gap: 20px;
 }
 
 .map-container p {
-  position: absolute;
-  right: 0;
-  width: 50%;
+  width: 80%;
 }
 
 #hamburger-menu {
   display: none;
-}
-
-#hamburger-btn,
-.whatsapp-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
 }
 
 .btn-primary {
@@ -323,14 +284,124 @@ p {
   text-shadow: 2px 2px 10px gray;
 }
 
+svg {
+  display: block;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  gap: 20px;
+  padding: 100px 70px;
+  background-color: #005f73;
+}
+.gallery div {
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.img1 {
+  grid-area: 1 / 1 / 4 / 4;
+  background-image: url("./unnamed.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.img2 {
+  grid-area: 1 / 4 / 3 / 6;
+  object-fit: cover;
+  background-image: url("./unnamed.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.img3 {
+  grid-area: 3 / 4 / 4 / 6;
+  object-fit: cover;
+  background-image: url("./unnamed.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.img4 {
+  grid-area: 4 / 1 / 6 / 4;
+  object-fit: cover;
+  background-image: url("./unnamed.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.img5 {
+  grid-area: 4 / 4 / 6 / 6;
+  object-fit: cover;
+  background-image: url("./unnamed.jpg");
+}
+
+.titolo-container {
+  position: relative;
+  top: 12vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./images/img_castello_5.png);
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 80vh;
+  border-bottom-left-radius: 45vh;
+  border-bottom-right-radius: 45vh;
+  box-shadow: 2px 2px 5px gray;
+  margin-bottom: 13vh;
+}
+
 @media (max-width: 768px) {
+  .navbar {
+    border: none;
+    height: 70px;
+  }
+
+  .titolo-container {
+    top: 70px;
+  }
+
   #titolo {
     font-size: 3rem;
+    padding: 0 3rem;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .gallery p {
+  }
+
+  .gallery div {
+    width: 100%;
+    height: 300px;
+  }
+
+  .img4,
+  .img5 {
+    display: none;
   }
 
   .container-main-info p {
-    margin: 0px 1rem;
     width: 100%;
+  }
+  .container-main-info {
+    padding: 150px 5px;
+    padding-top: 40px;
   }
 
   #dragon-pink {
@@ -347,6 +418,11 @@ p {
 
   #hamburger-menu {
     display: block;
+  }
+
+  #hamburger-menu i,
+  #telephone i {
+    color: #ca6702;
   }
 
   #telephone {
