--- a/root/style.css
+++ b/root/style.css
@@ -121,7 +121,7 @@ body {
 .container-social-link a {
   text-decoration: none;
   text-transform: uppercase;
-  color: #333;
+  color: #e9d8a6;
   font-size: 20px;
   font-weight: 900;
   font-family: "Fredoka", sans-serif;
@@ -362,6 +362,52 @@ svg {
   margin-bottom: 13vh;
 }
 
+.nav-links.active {
+  display: flex; /* mostra i link */
+  flex-direction: column; /* verticale su mobile */
+}
+
+#sidebar {
+  position: fixed;
+  z-index: 999;
+  top: 70px;
+  left: 0;
+  height: 100%;
+  width: 15rem;
+  transition: transform 0.3s ease;
+  transform: translateX(-100%);
+  /* From https://css.glass */
+  background: rgb(202, 103, 2, 0.9);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 243, 214, 0.3);
+}
+
+#sidebar ul {
+  padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0;
+}
+
+#sidebar li {
+  padding: 1rem;
+  text-align: center;
+  text-decoration: none;
+  border-bottom: 2px solid black;
+}
+
+#sidebar li:hover {
+  background-color: #ee9b00;
+}
+
+#sidebar.active {
+  transform: translateX(0);
+}
+
 @media (max-width: 768px) {
   .navbar {
     border: none;
@@ -430,48 +476,4 @@ svg {
   }
 }
 
-.nav-links.active {
-  display: flex; /* mostra i link */
-  flex-direction: column; /* verticale su mobile */
-}
 
-#sidebar {
-  position: fixed;
-  z-index: 999;
-  top: 12vh;
-  left: 0;
-  height: 100%;
-  width: 15rem;
-  transition: transform 0.3s ease;
-  transform: translateX(-100%);
-  /* From https://css.glass */
-  background: rgba(255, 243, 214, 0.6);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 243, 214, 0.3);
-}
-
-#sidebar ul {
-  padding: 0;
-  list-style: none;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0;
-}
-
-#sidebar li {
-  padding: 1rem;
-  text-align: center;
-  text-decoration: none;
-  border-bottom: 2px solid black;
-}
-
-#sidebar li:hover {
-  background-color: #ffd180;
-}
-
-#sidebar.active {
-  transform: translateX(0);
-}
